[Change] Misc. Code Cleanups
- Fix: Fixed a typo in the Biome Icon Name in `ConfigUtils`
- Added a `ConstantConditions` Suppression in main class, ImageFrame, and TileEntityUtils
- Added a `Guava` warning suppression for our Guava implementation
- Fix: Fixed javadoc link for `ImageFrame` as well as a long conversion typo
- Replaced more usages of `new FileInputStream` and it's output counterpart, with `Files` calls.
- Suppressed `JavadocLinkAsPlainText` in DiscordAssetUtils, intended formatting.
- Adjusted imports in Discord RPC classes for better javadoc formatting
- Fix: Migrate to `AFUNIXSocketaddress.of` instead of the `new` constructor to resolve deprecation warning in `UnixPipe`
- Fix: Adjusted the `newInstance` calls in Manual Class Lookups from the Dimension and Biome modules, in order to resolve a deprecation warning
- Removed an unnecesary suppression in `MappingUtils`